Lab 3/glusterfs-test.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: nginx-glusterfs
  labels:
    app: nginx-glusterfs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-glusterfs
  template:
    metadata:
      labels:
        app: nginx-glusterfs
    spec:
      volumes:
      - name: demo-glusterfs-storage
        persistentVolumeClaim:
          claimName: glusterfs-pvc
      containers:
        - name: nginx-glusterfs-container
          image: mycluster.icp:8500/default/nginx
          ports:
            - containerPort: 80
              name: "http-server"
          volumeMounts:
            - mountPath: "/usr/share/nginx/html"
              name: demo-glusterfs-storage
