Lab 3/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: nginx-glusterfs
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nginx-glusterfs
          servicePort: 80
        path: /nginx-glusterfs
